<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:text="@string/converter_my_balance"
        android:textAllCaps="true" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/balance"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_balance" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:text="@string/converter_currency_exchange"
        android:textAllCaps="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:color/black"
        android:dividerPadding="1dp"
        android:orientation="vertical"
        android:showDividers="middle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@android:drawable/arrow_up_float"
                android:drawablePadding="8dp"
                android:text="@string/converter_sell" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/sellCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="end"
                android:hint="100.00"
                android:inputType="numberDecimal" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/selectedSellCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@android:drawable/arrow_down_float"
                android:gravity="end"
                android:paddingEnd="4dp"
                android:text="test" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@android:drawable/arrow_down_float"
                android:drawablePadding="8dp"
                android:text="@string/converter_receive" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/receiveCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@android:color/holo_green_dark"
                tools:text="100.13" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/selectedReceiveCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@android:drawable/arrow_down_float"
                android:gravity="end"
                android:paddingEnd="4dp"
                android:text="test" />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:background="@drawable/rounded_button"
            android:text="@string/converter_submit"
            android:gravity="center"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
    </FrameLayout>

</LinearLayout>